<?xml version="1.0" encoding="utf-8"?>
<!--
*
* Copyright (C) 2013 www.yaacc.de
*
* This program is free software; you can redistribute it and/or
* modify it under the terms of the GNU General Public License
* as published by the Free Software Foundation; either version 3
* of the License, or (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program; if not, write to the Free Software
* Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-->
<resources>
    <string name="app_name">YAACC</string>
    <string name="menu_settings">Settings</string>
    <string name="browse_main_folder">Browse main folder</string>
    <string name="browse_context_title">Available actions</string>
    <string name="browse_context_play">Play item</string>
    <string name="browse_context_download">Download item</string>
    <string name="browse_context_add_to_playplist">Add item to playlist</string>
    <string name="browse_no_content_found">No data found</string>
    <string name="browse_button_devices">Sender Devices</string>
    <string name="browse_button_prev">Previous Item</string>
    <string name="browse_button_stop">Stop Playback</string>
    <string name="browse_button_next">Next Item</string>
    <string name="title_activity_main">YAACC</string>
    <string name="title_activity_upnp_browser">UpnpBrowserActivity</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_image_viewer_settings">Settings for image viewer</string>
    <string name="title_activity_generic_browse">GenericBrowseActivity</string>
    <string name="settings_category_send_rec">Sending and Receiving</string>
    <string name="settings_category_browsing">Media browsing behavior</string>
    <string name="settings_selected_provider_title">Current media provider</string>
    <string name="settings_change_provider">Tab to change current provider</string>
    <string name="settings_selected_receivers_title">Current media receivers</string>
    <string name="settings_change_receiver">Tab to change current receiver</string>
    <string name="settings_audio_app">Audio Playback</string>
    <string name="settings_video_app">Image Playback</string>
    <string name="settings_image_app">Video Playback</string>
    <string name="settings_default_duration">default item duration</string>
    <string name="settings_default_duration_key">default item duration</string>
    <string name="settings_silence_duration">silence duration</string>
    <string name="settings_silence_duration_key">silence duration</string>
    <string name="settings_audio_app_on">Local audio playback directly in YAACC is enabled</string>
    <string name="settings_audio_app_off">Local audio playback opens a third party application</string>
    <string name="settings_image_app_on">Local image playback directly in YAACC is enabled</string>
    <string name="settings_image_app_off">Local image playback opens a third party application</string>
    <string name="settings_video_app_on">Local video playback directly in YAACC is enabled</string>
    <string name="settings_video_app_off">Local video playback opens a third party application</string>
    <string name="settings_browse_audio_on">Show audio files</string>
    <string name="settings_browse_audio_off">Show no audio files</string>
    <string name="settings_browse_video_on">Show video files</string>
    <string name="settings_browse_video_off">Show no video files</string>
    <string name="settings_browse_image_on">Show image files</string>
    <string name="settings_browse_image_off">Show no image files</string>
    <string name="settings_browse_thumbnails_on">Show image thumbnails</string>
    <string name="settings_browse_thumbnails_off">Show no image thumbnails</string>
    <string name="settings_no_content_found">No content found for browsing</string>
    <string name="settings_audio_chkbx">audio_chkbx</string>
    <string name="settings_video_chkbx">video_chkbx</string>
    <string name="settings_image_chkbx">image_chkbx</string>
    <string name="settings_thumbnails_chkbx">thumbnails_chkbx</string>
    <string name="settings_local_server_title">Local server configuration</string>
    <string name="settings_local_server_started">local server is started</string>
    <string name="settings_local_server_stopped">local server is stopped</string>
    <string name="settings_local_server_chkbx">local_server_chkbx</string>
    <string name="settings_local_server_receiver_off">media receiver is disabled</string>
    <string name="settings_local_server_receiver_on">media receiver is enabled</string>
    <string name="settings_local_server_receiver_chkbx">local_server_receiver_chkbx</string>
    <string name="settings_local_server_provider_off">content directory is disabled</string>
    <string name="settings_local_server_provider_on">content directory is enabled</string>
    <string name="settings_local_server_provider_chkbx">local_server_provider_chkbx</string>
    <string name="settings_local_server_testcontent">local server using test content</string>
    <string name="settings_local_server_mediastore">local server using mediastore</string>
    <string name="settings_local_server_testcontent_chkbx" translatable="false">local_server_testcontent_chkbx</string>
    <string name="settings_local_server_name">network name for local server</string>
    <string name="settings_local_server_name_key">Local server name</string>
    <string name="settings_local_server_autostart_deactivated">Server will not start after booting</string>
    <string name="settings_local_server_autostart_activated">Server will start after booting</string>
    <string name="settings_local_server_autostart_chkbx">settings_local_server_autostart_chkbx</string>
    <string name="settings_sending_upnp_alive_interval">Sending upnp alive notifications</string>
    <string name="settings_sending_upnp_alive_interval_key" translatable="false">settings_sending_upnp_alive_interval_key</string>
    <string name="settings_category_playing">Media playing behavior</string>
    <string name="settings_replay_playlist_chkbx">settings_replay_playlist_chkbx</string>
    <string name="settings_replay_playlist_on">Replay playlist</string>
    <string name="settings_replay_playlist_off">Don\'t replay playlist</string>
    <string name="settings_music_player_shuffle_chkbx">settings_music_player_chkbx</string>
    <string name="settings_music_player_shuffle_on">Shuffled music play</string>
    <string name="settings_music_player_shuffle_off">Ordered music play</string>
    <string name="error_upnp_generic">An unknown error happened while browsing</string>
    <string name="error_upnp_specific">The following error occurred:</string>
    <string name="error_no_receiver_device_found">No receiver device found</string>
    <string name="error_no_activity_found">No activity found for playing mimetype \'%1$s\'</string>
    <string name="image_viewer_settings_duration">picture stay duration</string>
    <string name="image_viewer_settings_duration_key" translatable="false">image_viewer_settings_duration_key</string>
    <string name="yaacc_menu_settings">YAACC settings</string>
    <string name="yaacc_about">About</string>
    <string name="no_valid_uri_data_found_to_display">No valid uri data found to display</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="exit">exit</string>
    <string name="title_activity_music_player">Yaacc Music player</string>
    <string name="musicActivityImageView">Cover</string>
    <string name="avtransportPlayerActivityImageView">Device</string>
    <string name="playerNameMusic">music</string>
    <string name="playerNameImage">image</string>
    <string name="playerNameMultiContent">multi</string>
    <string name="playerNameAvTransport">remote</string>
    <string name="multiContentPlayerActivityImageView">multi content</string>
    <string name="title_activity_avtransport_player">Yaacc Remote player</string>
    <string name="title_activity_multi_content_player">Yaacc Default player</string>
    <string name="can_not_start_activity">"Can not start app! Reason: "</string>
    <string name="app_descrip">Bring your UPnP devices in your local network together with android!\n <a href="http://www.yaacc.de">www.yaacc.de</a>\n\nYAACC is developed under GPLv3. Feel free to use and share it without any warranty. Licence details are documented at <a href="http://www.gnu.org/licenses/gpl-3.0">GPLv3</a> (www.gnu.org/licenses/gpl-3.0)\n\nFurther licences are:\nThe UPNP implementation is based on <a href="http://4thline.org/projects/cling">Cling</a> (4thline.org/projects/cling)\nIcons are used came from <a href="http://www.carpicon.com">black + white icons 2.0</a> (www.carpicon.com) and <a href="http://developer.android.com/about/index.html">Android</a> itself. Android is a trademark of Google Inc (developer.android.com/about/index.html )</string>
    <string name="title_activity_yaacc_upnp_server_control">Yaacc Upnp server control</string>
    <string name="yaacc_upnp_server_stop_server">stop server</string>
    <string name="yaacc_upnp_server_start_server">start server</string>
    <string name="playerCurrentItem">currentItem</string>
    <string name="musicActivityNextLabel">"Next: "</string>
    <string name="playerNextItem">nextItem</string>
    <string name="playerPosition">Position</string>
    <string name="playerTiming">Timing: </string>
    <string name="playerTimeDuration">Duration</string>
    <string name="playerTimeSeparator"> / </string>
    <string name="playerTimeElapsed">Elapsed</string>
</resources>