<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *
 * Copyright (C) 2013 www.yaacc.de 
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicPlayerActivity" >

     <RelativeLayout
         android:id="@+id/thirdPartieMusicActivityControls"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:orientation="horizontal" >

         <ImageButton
             android:id="@+id/thirdPratieMusicActivityControlPrev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:contentDescription="@string/previous"
             android:src="@drawable/player_start" />

         <ImageButton
             android:id="@+id/thirdPratieMusicActivityControlPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/thirdPratieMusicActivityControlPrev"
             android:contentDescription="@string/play"
             android:src="@drawable/player_play" />

         <ImageButton
             android:id="@+id/thirdPratieMusicActivityControlPause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/thirdPratieMusicActivityControlPlay"
             android:contentDescription="@string/pause"
             android:src="@drawable/player_pause" />

         <ImageButton
             android:id="@+id/thirdPratieMusicActivityControlStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_toRightOf="@+id/thirdPratieMusicActivityControlPause"
             android:contentDescription="@string/stop"
             android:src="@drawable/player_stop" />

         <ImageButton
             android:id="@+id/thirdPratieMusicActivityControlNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/thirdPratieMusicActivityControlStop"
             android:contentDescription="@string/next"
             android:src="@drawable/player_end" />
          <ImageButton
             android:id="@+id/thirdPratieMusicActivityControlExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/thirdPratieMusicActivityControlNext"
             android:contentDescription="@string/exit"
             android:src="@drawable/button_cancel" />
     </RelativeLayout>

     <ImageView
         android:id="@+id/thirdPratieMusicActivityImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/thirdPartieMusicActivityControls"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/musicActivityImageView"
         android:src="@drawable/cdtrack" />

</RelativeLayout>