<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<ListView
        android:id="@+id/itemList"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/controls"/>
    
    <RelativeLayout android:id="@+id/controls" 
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <ImageButton android:id="@+id/controlPrev"
        android:contentDescription="@string/browse_button_prev"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/player_start"
        android:layout_toLeftOf="@+id/controlStop"/>
        
        <ImageButton android:id="@+id/controlStop"
        android:contentDescription="@string/browse_button_stop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/player_stop"
        android:layout_centerHorizontal="true"/>
        
        <ImageButton android:id="@+id/controlNext"
        android:contentDescription="@string/browse_button_next"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/player_end"
        android:layout_toRightOf="@+id/controlStop"/>
    </RelativeLayout>
    

</RelativeLayout>
